# diesel_minimal_reproduction

./: Cargo.toml
migrations/2020-07-20-183107_create_things/: down.sql  up.sql
src/: main.rs  schema.rs
