[package]
name = "diesel_minimal_reproduction"
version = "0.1.0"
authors = ["Chris Prohoda <cgprohoda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1", features = ["postgres"] }
dotenv = "0.15"
